# Master-Folder-Manager

./: .coveragerc  .gitignore  .markdownlint-cli2.json  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  TODO.md  fix_markdown.py  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: markdown-lint.yml  tests.yml
.history/: README_20241203033503.md  README_20241203035950.md  README_20241203040244.md  requirements_20241203033510.txt  setup_20241203033510.py
.history/src/: README_20241203040225.md  __init___20241203033510.py  main_20241203034829.py  main_20241203035825.py  main_20241203040558.py  main_20241203040935.py
.history/tools/: git_setup_20241203041141.py
coding_standards/: README.md  api_client_standards.md  background_tasks_standards.md  cli_standards.md  coding_standards.md  django_coding_standards.md  fastapi_coding_standards.md  flask_coding_standards.md  microservices_standards.md  package_standards.md  performance_standards.md  pydantic_coding_standards.md  python_coding_standards.md  sqlalchemy_standards.md  testing_standards.md
cursor_docs/: .cursorignore  coding_standards.md  rules_for_ai.md
cursor_docs/tool_use/: cursor_rules_tool_creation.md  cursor_rules_tool_creation_and_use_expanded.md
docs/: index.md
src/: README.md  __init__.py  main.py
tests/: __init__.py  conftest.py  pytest.ini
tools/: git_setup.py
(+31 files in other folders)
